<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_models"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="1"
        android:title="@string/menu_models"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="2"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_chat"
        android:orderInCategory="3"
        android:title="@string/menu_clear_chat"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unload"
        android:orderInCategory="4"
        android:title="@string/menu_unload"
        app:showAsAction="never" />

</menu>
